# mcp-ai-toolkit

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  server_config.example.json  server_config.json
clients/: __init__.py  mcp_chatbot.py
data/papers/: .gitkeep
docs/: SERVERS.md  SETUP.md
examples/: example_usage.py
servers/: __init__.py  asureitfy_server.py  content_aggregator_server.py  decision_engine_server.py  insurance_server.py  monitoring_server.py  research_server.py
